--- a/zdjecia.html
+++ b/zdjecia.html
@@ -23,7 +23,7 @@
         <img src="popsmoke2.jpg" style="width: 200;">
 
         <h2>Filmik</h2>
-        <video  controls style="display: block; margin: auto; width="640"; height="360";>
+        <video  controls style="display: block; margin: auto; width="640";>
             <source src="nutka.mp4" type="video/mp4">
         </video>
     </main>
@@ -34,5 +34,6 @@
 
 </body>
 </html>
+
 
 
