--- a/zdjecia.html
+++ b/zdjecia.html
@@ -23,7 +23,7 @@
         <img src="popsmoke2.jpg" style="width: 200;">
 
         <h2>Filmik</h2>
-        <video  controls style="width="300";>
+<video width="640" height="360" controls style="display:block; margin:auto;">
             <source src="nutka.mp4" type="video/mp4">
         </video>
     </main>
@@ -34,6 +34,7 @@
 
 </body>
 </html>
+
 
 
 
